--- a/package.json
+++ b/package.json
@@ -1,34 +1,58 @@
 {
-  "name": "relia",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "relia",
+	"version": "0.1.0",
+	"private": true,
+	"main": "public/electron.js",
+	"homepage": "./",
+	"dependencies": {
+		"@testing-library/jest-dom": "^4.2.4",
+		"@testing-library/react": "^9.4.0",
+		"@testing-library/user-event": "^7.2.1",
+		"antd": "^3.26.9",
+		"concurrently": "^5.1.0",
+		"electron-builder": "^22.3.2",
+		"electron-is-dev": "^1.1.0",
+		"mxgraph-js": "^1.0.1",
+		"nodemon": "^2.0.2",
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0",
+		"react-router-dom": "^5.1.2",
+		"react-scripts": "3.3.1",
+		"wait-on": "^4.0.0"
+	},
+	"build": {
+		"appId": "com.example.electron-cra",
+		"files": [
+			"build/**/*",
+			"node_modules/**/*"
+		],
+		"directories": {
+			"buildResources": "assets"
+		}
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"electron-dev": "concurrently \"BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
+		"electron-pack": "build --em.main=build/electron.js",
+		"preelectron-pack": "npm build"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"electron": "^8.0.0",
+		"electron-devtools-installer": "^2.2.4"
+	}
 }
