--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.4.0",
 		"@testing-library/user-event": "^7.2.1",
-		"antd": "^3.26.9",
+		"bootstrap": "^4.4.1",
 		"concurrently": "^5.1.0",
 		"electron-builder": "^22.3.2",
 		"electron-is-dev": "^1.1.0",
+		"graphql": "^14.6.0",
 		"mxgraph-js": "^1.0.1",
-		"nodemon": "^2.0.2",
 		"react": "^16.12.0",
+		"react-bootstrap": "^1.0.0-beta.17",
 		"react-dom": "^16.12.0",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.3.1",
