--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"react-bootstrap": "^1.0.0-beta.17",
 		"react-dom": "^16.12.0",
 		"react-router-dom": "^5.1.2",
-		"react-scripts": "3.3.1",
+		"react-scripts": "^3.4.0",
 		"wait-on": "^4.0.0"
 	},
 	"build": {
