--- a/package.json
+++ b/package.json
@@ -5,51 +5,20 @@
 	"main": "public/electron.js",
 	"homepage": "./",
 	"dependencies": {
-		"@rescripts/cli": "^0.0.14",
-		"@rescripts/rescript-env": "^0.0.12",
-		"@testing-library/jest-dom": "^4.2.4",
-		"@testing-library/react": "^9.4.0",
-		"@testing-library/user-event": "^7.2.1",
 		"bootstrap": "^4.4.1",
-		"concurrently": "^5.1.0",
-		"electron-is-dev": "^1.1.0",
-		"lodash": "^4.17.15",
-		"mathjs": "^6.6.4",
+		"mxgraph": "github:jgraph/mxgraph",
 		"mxgraph-js": "^1.0.1",
 		"react": "^16.12.0",
 		"react-bootstrap": "^1.0.0-beta.17",
 		"react-dom": "^16.12.0",
 		"react-router-dom": "^5.1.2",
-		"react-scripts": "^3.4.0",
-		"wait-on": "^4.0.0"
-	},
-	"build": {
-		"appId": "com.example.electron-cra",
-		"files": [
-		  "build/**/*",
-		  "node_modules/**/*"
-		],
-		"directories":{
-		  "buildResources": "assets"
-		},
-		"win": {
-			"target": "portable"
-		},
-		"mac": {
-			"target": "dmg"
-		}
+		"react-scripts": "^3.4.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
-    	"build": "react-scripts build",
-    	"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"electron-dev": "concurrently \"BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
-		"preelectron-pack": "yarn build",
-		"postinstall": "electron-builder install-app-deps",
-		"electron-pack-win": "electron-builder --win --ia32 -c.extraMetadata.main=build/electron.js",
-		"electron-pack": "electron-builder --mac -c.extraMetadata.main=build/electron.js"
-
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -67,8 +36,13 @@
 		]
 	},
 	"devDependencies": {
-		"electron": "^8.0.0",
-		"electron-builder": "^22.3.2",
-		"electron-devtools-installer": "^2.2.4"
+		"@typed-mxgraph/typed-mxgraph": "^1.0.4",
+		"@types/jest": "^26.0.23",
+		"@types/node": "^16.0.0",
+		"@types/react": "^17.0.13",
+		"@types/react-dom": "^17.0.8",
+		"@types/react-redux": "^7.1.16",
+		"@types/react-router-dom": "^5.1.7",
+		"typescript": "^4.3.5"
 	}
 }
