--- a/package.json
+++ b/package.json
@@ -1,53 +1,54 @@
 {
-	"name": "relia",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"bootstrap": "^4.4.1",
-		"mxgraph": "github:jgraph/mxgraph",
-		"mxgraph-js": "^1.0.1",
-		"react": "^16.12.0",
-		"react-bootstrap": "^1.0.0-beta.17",
-		"react-dom": "^16.12.0",
-		"react-router-dom": "^5.1.2",
-		"react-scripts": "^3.4.0"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!your-module-name)/\"",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": "react-app"
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"@typed-mxgraph/typed-mxgraph": "^1.0.4",
-		"@types/jest": "^26.0.23",
-		"@types/node": "^16.0.0",
-		"@types/react": "^17.0.13",
-		"@types/react-dom": "^17.0.8",
-		"@types/react-redux": "^7.1.16",
-		"@types/react-router-dom": "^5.1.7",
-		"@typescript-eslint/eslint-plugin": "^4.29.0",
-		"@typescript-eslint/parser": "^4.29.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-prettier": "^3.4.0",
-		"eslint-plugin-react": "^7.24.0",
-		"eslint-plugin-react-hooks": "^4.2.0",
-		"prettier": "^2.3.2",
-		"typescript": "^4.3.5"
-	}
+    "name": "relia",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "bootstrap": "^4.4.1",
+        "mxgraph": "github:jgraph/mxgraph",
+        "mxgraph-js": "^1.0.1",
+        "react": "^16.12.0",
+        "react-bootstrap": "^1.0.0-beta.17",
+        "react-dom": "^16.12.0",
+        "react-router-dom": "^5.1.2",
+        "react-scripts": "^3.4.0"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!your-module-name)/\"",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@typed-mxgraph/typed-mxgraph": "^1.0.4",
+        "@types/jest": "^26.0.23",
+        "@types/node": "^16.0.0",
+        "@types/react": "^17.0.13",
+        "@types/react-dom": "^17.0.8",
+        "@types/react-redux": "^7.1.16",
+        "@types/react-router-dom": "^5.1.7",
+        "@typescript-eslint/eslint-plugin": "^4.29.0",
+        "@typescript-eslint/parser": "^4.29.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-config-react-app": "^6.0.0",
+        "eslint-plugin-prettier": "^3.4.0",
+        "eslint-plugin-react": "^7.24.0",
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "prettier": "^2.3.2",
+        "typescript": "^4.3.5"
+    }
 }
