--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
     "private": true,
     "dependencies": {
         "bootstrap": "^4.4.1",
-        "mxgraph": "github:jgraph/mxgraph",
-        "mxgraph-js": "^1.0.1",
         "react": "^16.12.0",
         "react-bootstrap": "^1.0.0-beta.17",
         "react-dom": "^16.12.0",
@@ -48,6 +46,7 @@
         "eslint-plugin-prettier": "^3.4.0",
         "eslint-plugin-react": "^7.24.0",
         "eslint-plugin-react-hooks": "^4.2.0",
+        "mxgraph": "^4.2.2",
         "prettier": "^2.3.2",
         "typescript": "^4.3.5"
     }
