--- a/package.json
+++ b/package.json
@@ -1,53 +1,40 @@
 {
-    "name": "relia",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "bootstrap": "^4.4.1",
-        "react": "^16.12.0",
-        "react-bootstrap": "^1.0.0-beta.17",
-        "react-dom": "^16.12.0",
-        "react-router-dom": "^5.1.2",
-        "react-scripts": "^3.4.0"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!your-module-name)/\"",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
-        "@typed-mxgraph/typed-mxgraph": "^1.0.4",
-        "@types/jest": "^26.0.23",
-        "@types/node": "^16.0.0",
-        "@types/react": "^17.0.13",
-        "@types/react-dom": "^17.0.8",
-        "@types/react-redux": "^7.1.16",
-        "@types/react-router-dom": "^5.1.7",
-        "@typescript-eslint/eslint-plugin": "^4.29.0",
-        "@typescript-eslint/parser": "^4.29.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-config-react-app": "^6.0.0",
-        "eslint-plugin-prettier": "^3.4.0",
-        "eslint-plugin-react": "^7.24.0",
-        "eslint-plugin-react-hooks": "^4.2.0",
-        "mxgraph": "^4.2.2",
-        "prettier": "^2.3.2",
-        "typescript": "^4.3.5"
-    }
+  "name": "reliability",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "build": "babel src --extensions \".ts,.tsx\" --out-dir dist",
+    "lint": "eslint --ignore-path .gitignore \"**/*.{ts,tsx}\"",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|json|ts|tsx)\"",
+    "check-types": "tsc",
+    "validate": "npm-run-all --parallel check-types format lint build"
+  },
+  "dependencies": {
+    "bootstrap": "^4.4.1",
+    "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.17",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-typescript": "^7.15.0",
+    "@typed-mxgraph/typed-mxgraph": "^1.0.4",
+    "@types/jest": "^27.0.0",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.8",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "husky": "^7.0.1",
+    "lint-staged": "^11.1.2",
+    "mxgraph": "^4.2.2",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.3.2",
+    "typescript": "^4.3.5"
+  }
 }
