--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "eslint --ignore-path .gitignore \"**/*.{ts,tsx}\"",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|json|ts|tsx)\"",
     "check-types": "tsc",
-    "validate": "npm-run-all --parallel check-types format lint build"
+    "validate": "npm-run-all --parallel check-types format lint build",
+    "test": "jest",
+    "start": "webpack serve --mode=development --progress"
   },
+  "type": "module",
   "dependencies": {
     "bootstrap": "^4.4.1",
     "react": "^16.12.0",
@@ -23,18 +26,37 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-typescript": "^7.15.0",
     "@typed-mxgraph/typed-mxgraph": "^1.0.4",
+    "@types/copy-webpack-plugin": "^8.0.1",
     "@types/jest": "^27.0.0",
+    "@types/mini-css-extract-plugin": "^2.2.0",
+    "@types/node": "^16.6.1",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-dev-server": "^3.11.5",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.2.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.1",
+    "jest": "^27.0.6",
     "lint-staged": "^11.1.2",
+    "mini-css-extract-plugin": "^2.2.0",
     "mxgraph": "^4.2.2",
     "npm-run-all": "^4.1.5",
+    "postcss-loader": "^6.1.1",
     "prettier": "^2.3.2",
-    "typescript": "^4.3.5"
+    "ts-loader": "^9.2.5",
+    "ts-node": "^10.2.0",
+    "typescript": "^4.3.5",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
