--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,11 +10,11 @@
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
-        "noEmit": true,
+        "noEmit": false,
         "jsx": "react",
         "typeRoots": ["node_modules/@types", "node_modules/@typed-mxgraph"],
         "target": "es5",
         "module": "esnext"
     },
-    "include": ["src"]
+    "include": ["src", "index.d.ts"]
 }
